--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,26 @@
-cffi==2.0.0
+babel==2.17.0
+black==25.9.0
+click==8.3.0
+colorama==0.4.6
 contourpy==1.3.3
-cryptography==46.0.3
 cycler==0.12.1
-fonttools==4.60.1
+fonttools==4.59.0
 joblib==1.5.2
 kiwisolver==1.4.9
-matplotlib==3.10.7
-numpy==2.3.4
-oracledb==3.4.0
+matplotlib==3.10.5
+mypy_extensions==1.1.0
+mysql-connector-python==9.5.0
+networkx==3.5
+numpy==2.3.2
 packaging==25.0
-pandas==2.3.3
-pillow==12.0.0
-pycparser==2.23
-pyparsing==3.2.5
+pathspec==0.12.1
+pillow==11.3.0
+platformdirs==4.4.0
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
-pytz==2025.2
+pytokens==0.1.10
 scikit-learn==1.7.2
 scipy==1.16.3
 six==1.17.0
 threadpoolctl==3.6.0
-typing_extensions==4.15.0
-tzdata==2025.2
+tkcalendar==1.6.1
